--- a/templates/index.html
+++ b/templates/index.html
@@ -5,26 +5,26 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='bulma-0.4.1/css/bulma.css') }}">
   </head>
   <body>
-    <section class="hero is-danger is-bold is-small">
+	<section class="hero is-danger" onclick="location.href='mysites'">
 	  <div class="hero-body">
 		<div class="container">
 		  <h1 class="title">
-			Looking for my stuff? 
+			Primary title
 		  </h1>
 		  <h2 class="subtitle">
-			CLICK HERE!
+			Primary subtitle
 		  </h2>
 		</div>
 	  </div>
 	</section>
-	<section class="hero is-primary is-bold">
-	  <div class="hero-body">
-		<div class="container">
-		  <h1 class="title">
-			Charles Haithcock
-		  </h1>
-		  <h2 class="subtitle">
-			This is my resume
+    <section class="hero is-primary is-bold">
+      <div class="hero-body">
+        <div class="container">
+	      <h1 class="title">
+	        Charles Haithcock
+          </h1>
+  	      <h2 class="subtitle">
+	        This is my resume
 		  </h2>
 		</div>
 	  </div>
