--- a/templates/mysites.html
+++ b/templates/mysites.html
@@ -5,19 +5,28 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='bulma-0.4.1/css/bulma.css') }}">
   </head>
   <body>
-    <div class="columns">
-	  <div class="column">
-		First column
-	  </div>
-	  <div class="column">
-		Second column
-	  </div>
-	  <div class="column">
-		Third column
-	  </div>
-	  <div class="column">
-		Fourth column
-	  </div>
-	</div>
+  <section class="section">
+    <div class="container">
+      <div class="heading">
+        <h1 class="title">My sites!</h1>
+        <h2 class="subtitle">
+          I got some good stuff here. 
+        </h2>
+      </div>
+    </div>
+  </section>
+
+
+  <section class="section">
+    <div class="container">
+      <div class="tile is-ancestor">
+        <div class="tile" onclick="location.href='http://haithcock.us:8096'">
+          <div class="tile is-child box notification is-success has-text-centered">
+            <p class="title" >Emby</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   </body> 
 </html>
