--- a/templates/index.html
+++ b/templates/index.html
@@ -3,35 +3,58 @@
     <title>Why hello there</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='bulma-0.4.1/css/bulma.css') }}">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
   </head>
   <body>
-	<section class="hero is-danger" onclick="location.href='mysites'">
-	  <div class="hero-body">
-		<div class="container">
-		  <h1 class="title">
-			Looking for my stuff? 
-		  </h1>
-		  <h2 class="subtitle">
-			Click here!
-          </h2>
-		</div>
-	  </div>
-	</section>
-  <section class="hero is-primary is-bold">
+  
+      <!-- Navigational header -->
+
+<nav class="nav">
+  <div class="nav-center">
+    <a class="nav-item" href="https://github.com/haithcockce">
+      <span class="icon">
+        <i class="fa fa-github"></i>
+      </span>
+    </a>
+    <a class="nav-item" href="https://www.facebook.com/AboveAsBelow">
+      <span class="icon">
+        <i class="fa fa-facebook-square"></i>
+      </span>
+    </a>
+    <a class="nav-item" href="/">
+      <span class="icon">
+        <i class="fa fa-home"></i>
+      </span>
+    </a>
+    <a class="nav-item">
+	  <span class="icon">
+		<i class="fa fa-info-circl"></i>
+	  </span>
+    </a>
+    <a class="nav-item">
+      Resume
+    </a>
+    <a class="nav-item is-danger" href="mysites">Homebase</a>
+  </div>
+</nav>
+
+
+
+  <section class="hero is-dark is-bold is-fullheight">
     <div class="hero-body">
       <div class="container">
-        <h1 class="title">
-	        Charles Haithcock
-        </h1>
-        <h2 class="subtitle">
-	        This is my resume
-	      </h2>
-	    </div>
-	  </div>
-	</section>
-  <section class="section">
-    <div class="container">
-      Oh hey, you can know more about me later. I will get back to this...
+        <div class="columns">
+          <div class="column has-text-centered">  
+            <h1 class="title">
+                Charles Haithcock
+            </h1>
+			<h2 class="subtitle">
+			  Think. Create. Do. 
+			</h2>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
   </body>
