--- a/templates/about.html
+++ b/templates/about.html
@@ -1,11 +1,14 @@
 <html>
   <head>
-    <title>All my goodies!</title>
-    {% include '__metas.html' %}
+    <title>About Me</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='bulma-0.4.1/css/bulma.css') }}">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
 
-  {% include '__navbar.html' %}
+
+ {% include '__navbar.html' %}
 
   <section class="section">
     <div class="container">
